--- a/Tensorflow/01_digit_classification.ipynb
+++ b/Tensorflow/01_digit_classification.ipynb
@@ -1142,6 +1142,15 @@
    "source": [
     "print_confusion_matrix()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sess.close()"
+   ]
   }
  ],
  "metadata": {
