--- a/DeepLearning.AI/Convolutional Neural Networks/04_ResidualNetworks.ipynb
+++ b/DeepLearning.AI/Convolutional Neural Networks/04_ResidualNetworks.ipynb
@@ -197,9 +197,6 @@
     "\n",
     "You've implemented the ResNet identity block. Next, the ResNet \"convolutional block\" is the other type of block. You can use this type of block when the input and output dimensions don't match up. The difference with the identity block is that there is a CONV2D layer in the shortcut path: \n",
     "\n",
-    "<img src=\"images/convblock_kiank.png\" style=\"width:650px;height:150px;\">\n",
-    "<caption><center> <u> <font color='purple'> **Figure 4** </u><font color='purple'>  : **Convolutional block** </center></caption>\n",
-    "\n",
     "The CONV2D layer in the shortcut path is used to resize the input $x$ to a different dimension, so that the dimensions match up in the final addition needed to add the shortcut value back to the main path. (This plays a similar role as the matrix $W_s$ discussed in lecture.) For example, to reduce the activation dimensions's height and width by a factor of 2, you can use a 1x1 convolution with a stride of 2. The CONV2D layer on the shortcut path does not use any non-linear activation function. Its main role is to just apply a (learned) linear function that reduces the dimension of the input, so that the dimensions match up for the later addition step. \n",
     "\n",
     "The details of the convolutional block are as follows. \n",
@@ -352,9 +349,6 @@
     "## 3 - Building your first ResNet model (50 layers)\n",
     "\n",
     "You now have the necessary blocks to build a very deep ResNet. The following figure describes in detail the architecture of this neural network. \"ID BLOCK\" in the diagram stands for \"Identity block,\" and \"ID BLOCK x3\" means you should stack 3 identity blocks together.\n",
-    "\n",
-    "<img src=\"images/resnet_kiank.png\" style=\"width:850px;height:150px;\">\n",
-    "<caption><center> <u> <font color='purple'> **Figure 5** </u><font color='purple'>  : **ResNet-50 model** </center></caption>\n",
     "\n",
     "The details of this ResNet-50 model are:\n",
     "- Zero-padding pads the input with a pad of (3,3)\n",
@@ -518,10 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's load the SIGNS Dataset.\n",
-    "\n",
-    "<img src=\"images/signs_data_kiank.png\" style=\"width:450px;height:250px;\">\n",
-    "<caption><center> <u> <font color='purple'> **Figure 6** </u><font color='purple'>  : **SIGNS dataset** </center></caption>\n"
+    "Let's load the SIGNS Dataset.\n"
    ]
   },
   {
