non max suppression

--- a/DeepLearning.AI/Convolutional Neural Networks/05_CarDetection.ipynb
+++ b/DeepLearning.AI/Convolutional Neural Networks/05_CarDetection.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -388,26 +388,26 @@
     "    box1 -- first box, list object with coordinates (x1, y1, x2, y2)\n",
     "    box2 -- second box, list object with coordinates (x1, y1, x2, y2)\n",
     "    \"\"\"\n",
-    "\n",
+    "    \n",
     "    # Calculate the (y1, x1, y2, x2) coordinates of the intersection of box1 and box2. Calculate its Area.\n",
     "    ### START CODE HERE ### (≈ 5 lines)\n",
-    "    xi1 = None\n",
-    "    yi1 = None\n",
-    "    xi2 = None\n",
-    "    yi2 = None\n",
-    "    inter_area = None\n",
+    "    xi1 = max(box1[0],box2[0])\n",
+    "    yi1 = max(box1[1],box2[1])\n",
+    "    xi2 = min(box1[2],box2[2])\n",
+    "    yi2 = min(box1[3],box2[3])\n",
+    "    inter_area = max((yi2 - yi1),0) * max((xi2 - xi1),0)\n",
     "    ### END CODE HERE ###    \n",
     "\n",
     "    # Calculate the Union area by using Formula: Union(A,B) = A + B - Inter(A,B)\n",
     "    ### START CODE HERE ### (≈ 3 lines)\n",
-    "    box1_area = None\n",
-    "    box2_area = None\n",
-    "    union_area = None\n",
+    "    box1_area = (box1[3] - box1[1]) * (box1[2]-box1[0])\n",
+    "    box2_area = (box1[3] - box1[1]) * (box1[2]-box1[0])\n",
+    "    union_area = box1_area + box2_area - inter_area\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    # compute the IoU\n",
     "    ### START CODE HERE ### (≈ 1 line)\n",
-    "    iou = None\n",
+    "    iou = inter_area / union_area\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return iou"
@@ -415,11 +415,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iou = 0.14285714285714285\n"
+     ]
+    }
+   ],
    "source": [
     "box1 = (2, 1, 4, 3)\n",
     "box2 = (1, 2, 3, 4) \n",
@@ -463,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -496,14 +502,14 @@
     "    \n",
     "    # Use tf.image.non_max_suppression() to get the list of indices corresponding to boxes you keep\n",
     "    ### START CODE HERE ### (≈ 1 line)\n",
-    "    nms_indices = None\n",
+    "    nms_indices = tf.image.non_max_suppression(boxes=boxes,scores=scores,max_output_size=max_boxes,iou_threshold=iou_threshold)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    # Use K.gather() to select only nms_indices from scores, boxes and classes\n",
     "    ### START CODE HERE ### (≈ 3 lines)\n",
-    "    scores = None\n",
-    "    boxes = None\n",
-    "    classes = None\n",
+    "    scores = K.gather(scores,nms_indices)\n",
+    "    boxes = K.gather(boxes,nms_indices)\n",
+    "    classes = K.gather(classes,nms_indices)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return scores, boxes, classes"
@@ -511,11 +517,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scores[2] = 6.9384\n",
+      "boxes[2] = [-5.299932    3.13798141  4.45036697  0.95942086]\n",
+      "classes[2] = -2.24527\n",
+      "scores.shape = (10,)\n",
+      "boxes.shape = (10, 4)\n",
+      "classes.shape = (10,)\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as test_b:\n",
     "    scores = tf.random_normal([54,], mean=1, stddev=4, seed = 1)\n",
