check for non letter

--- a/C++ Programming/25_Documentation/latex/sample_8cpp.tex
+++ b/C++ Programming/25_Documentation/latex/sample_8cpp.tex
@@ -5,17 +5,11 @@
 Introduction to Doxygen.  
 
 
-\subsection*{Functions}
-\begin{DoxyCompactItemize}
-\item 
-\mbox{\Hypertarget{sample_8cpp_a840291bc02cba5474a4cb46a9b9566fe}\label{sample_8cpp_a840291bc02cba5474a4cb46a9b9566fe}} 
-int {\bfseries main} (void)
-\end{DoxyCompactItemize}
-
-
-\subsection{Detailed Description}
-Introduction to Doxygen. 
-
-This file is created to provide reference to various conventions and tags supported by Doxygen.
-
-Hope you find it helpful. 
+{\ttfamily \#include $<$iostream$>$}\newline
+{\ttfamily \#include $<$istream$>$}\newline
+{\ttfamily \#include $<$ostream$>$}\newline
+{\ttfamily \#include $<$string$>$}\newline
+{\ttfamily \#include $<$algorithm$>$}\newline
+{\ttfamily \#include $<$locale$>$}\newline
+{\ttfamily \#include $<$iterator$>$}\newline
+Include dependency graph for sample.\+cpp\+:
