Word Vectors stuff

--- a/cs224n/Assignment-1/exploring_word_vectors.ipynb
+++ b/cs224n/Assignment-1/exploring_word_vectors.ipynb
@@ -13,9 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package reuters to /home/vivek/nltk_data...\n",
+      "[nltk_data]   Package reuters is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "# All Import Statements Defined Here\n",
     "# Note: Do not add to this list.\n",
